Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


* profile interpretation of make.defaults now has access to variables
  defined by it's parents, per PMS.


pkgcore 0.6.4: Jun 5th, 2011

* intercept and suppress exceptions from triggers unless the trigger
  explicitly disables it.

* work around libmagic python bindings sucking and not always being
  able to be used.

* fix 'default' support for src_install for EAPI=4.


pkgcore 0.6.3: May 30th, 2011

* support for /etc/portage/make.profile; Please Do Not Use it, while
  pkgcore is forced to support it, usage of it breaks most tools and is
  bluntly lock-in (no reason to move it- it's the same, been in the same
  place for a decade now).  Duly warned.

* misc env/bug fixes for EMERGE_FROM to ensure compatibility.

* deploy eselect support via pinspect portageq

* added man page for pinspect

* added pmaint env-update

* expose /usr/local/* through PATH for ebulids.


pkgcore 0.6.2: May 27th, 2011

* for EAPI<4, expose MERGE_TYPE info via EMERGE_FROM; do this for compatibility
  with non-spec compliant ebuilds, and eclasses like linux-mod.  This restores
  in particular, binpkg support for kernel packages.  Thanks to Brian De Wolf
  for info leading to tracking this down.

* add support for stacking /etc/portage/make.conf on top of /etc/make.conf.

* add incrementalism between make.globals and make.conf to match changes
  in portage configuration parsing.  This fixes the common "I tried pkgcore
  and everything was license masked".  Breakage there owes to portage
  changing make.globals; can't do much about it unfortunately.  Thanks to
  Brian De Wolf for info leading to tracking this down.

* prefer 0755 permissions for binpkg package dir.

* pinspect pkgset learned --all option, to display all pkgsets it knows.


pkgcore 0.6.1: May 22nd, 2011

* fix for "or_node.blocks" AttributeError, and related resolution
  miscalculations.
